--- a/include/style/widget.styl
+++ b/include/style/widget.styl
@@ -21,11 +21,11 @@
 
     .tags
         .tag:first-child
-            background: whitesmoke
-            color: #4a4a4a
+            background: $primary
+            color: $primary-invert
 
         .tag:last-child
-            background: #e7e7e7
+            background: $light-grey
             color: $white-invert
 #toc
     max-height: calc(100vh - 22px)
